Fix the issue of panel title overflowing

--- a/src/css/mini-tokyo-3d.css
+++ b/src/css/mini-tokyo-3d.css
@@ -282,6 +282,7 @@
     margin: 10px 0;
     padding: 0 10px;
     line-height: 30px;
+    overflow: hidden;
 }
 .mini-tokyo-3d #panel-title {
     font-weight: bold;
@@ -317,7 +318,6 @@
 .mini-tokyo-3d .train-panel #panel-header {
     height: 48px;
     line-height: 24px;
-    overflow: hidden;
 }
 .mini-tokyo-3d .train-panel #panel-body {
     height: calc(100% - 68px);
@@ -438,6 +438,7 @@
 .mini-tokyo-3d .search-panel #panel-header {
     height: 39px;
     line-height: 39px;
+    overflow: visible;
 }
 .mini-tokyo-3d .search-panel #panel-body {
     height: calc(100% - 59px);
